--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* GENERAL */
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
 * {
@@ -8,7 +6,8 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poetsen One', cursive;
+  font-style: italic;
 }
 
 html {
@@ -19,18 +18,18 @@ p {
   color: rgb(85, 85, 85);
 }
 
-/* TRANSITION */
-
 a,
 .btn {
   transition: all 300ms ease;
 }
 
-/* DESKTOP NAV */
-
 nav,
 .nav-links {
   display: flex;
+}
+
+#desktop-nav a div, .section__text .title {
+  padding-right: 16px;
 }
 
 nav {
@@ -45,6 +44,7 @@ nav {
   font-size: 1.5rem;
 }
 
+
 a {
   color: black;
   text-decoration: none;
@@ -52,21 +52,18 @@ a {
 }
 
 a:hover {
-  color: grey;
-  text-decoration: underline;
-  text-underline-offset: 1rem;
-  text-decoration-color: rgb(181, 181, 181);
+  color: #ac79db;
 }
 
 .logo {
-  font-size: 2rem;
+  font-size: 2.5rem;
+  transition: transform 0.3s ease-in-out;
 }
 
 .logo:hover {
-  cursor: default;
+  transform: scale(1.1);
 }
 
-/* HAMBURGER MENU */
 
 #hamburger-nav {
   display: none;
@@ -146,8 +143,6 @@ a:hover {
   transform: none;
 }
 
-/* SECTIONS */
-
 section {
   padding-top: 4vh;
   height: 96vh;
@@ -159,8 +154,6 @@ section {
 .section-container {
   display: flex;
 }
-
-/* PROFILE SECTION */
 
 #profile {
   display: flex;
@@ -197,25 +190,17 @@ section {
 }
 
 .title {
-  font-size: 3rem;
+  font-size: 4rem;
   text-align: center;
 }
 
-#socials-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 1rem;
-  gap: 1rem;
-}
 
-/* ICONS */
 
 .icon {
   cursor: pointer;
   height: 2rem;
+  filter: invert(35%) sepia(20%) saturate(1000%) hue-rotate(253deg) brightness(96%) contrast(87%);
 }
-
-/* BUTTONS */
 
 .btn-container {
   display: flex;
@@ -228,42 +213,22 @@ section {
   transition: all 300ms ease;
   padding: 1rem;
   width: 8rem;
-  border-radius: 2rem;
+  border-radius: 10px;
 }
 
-.btn-color-1,
-.btn-color-2 {
-  border: rgb(53, 53, 53) 0.1rem solid;
-}
 
 .btn-color-1:hover,
 .btn-color-2:hover {
   cursor: pointer;
 }
 
-.btn-color-1,
-.btn-color-2:hover {
-  background: rgb(53, 53, 53);
-  color: white;
-}
-
-.btn-color-1:hover {
-  background: rgb(0, 0, 0);
-}
-
 .btn-color-2 {
   background: none;
-}
-
-.btn-color-2:hover {
-  border: rgb(255, 255, 255) 0.1rem solid;
 }
 
 .btn-container {
   gap: 1rem;
 }
-
-/* ABOUT SECTION */
 
 #about {
   position: relative;
@@ -285,19 +250,16 @@ section {
   display: flex;
 }
 
-.about-pic {
-  border-radius: 2rem;
-}
-
-
 .details-container {
   padding: 1.5rem;
   flex: 1;
-  background: white;
-  border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
+  background: rgb(200, 199, 248);
+  border-radius: 4rem;
   text-align: center;
+}
+
+.details-container h3 {
+  padding-bottom: 15px;
 }
 
 .section-container {
@@ -311,14 +273,12 @@ section {
   margin: auto 0;
 }
 
-/* EXPERIENCE SECTION */
-
 #experience {
   position: relative;
 }
 
 .experience-sub-title {
-  color: rgb(85, 85, 85);
+  color: black;
   font-weight: 600;
   font-size: 1.75rem;
   margin-bottom: 2rem;
@@ -350,22 +310,14 @@ article .icon {
   cursor: default;
 }
 
-/* PROJECTS SECTION */
-
 #projects {
   position: relative;
 }
 
 .color-container {
-  border-color: rgb(163, 163, 163);
-  background: rgb(250, 250, 250);
+  background:  rgb(200, 199, 248);
 }
 
-.project-img {
-  border-radius: 2rem;
-  width: 90%;
-  height: 90%;
-}
 
 .project-title {
   margin: 1rem;
@@ -377,8 +329,6 @@ article .icon {
   border-color: rgb(163, 163, 163);
 }
 
-/* CONTACT */
-
 #contact {
   display: flex;
   justify-content: center;
@@ -389,7 +339,7 @@ article .icon {
 .contact-info-upper-container {
   display: flex;
   justify-content: center;
-  border-radius: 2rem;
+  border-radius: 4rem;
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
   background: (250, 250, 250);
@@ -399,6 +349,7 @@ article .icon {
 
 .contact-info-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
@@ -409,15 +360,15 @@ article .icon {
   font-size: larger;
 }
 
-.contact-icon {
-  cursor: default;
+
+.contact-icon:hover {
+  scale: 1.1;
+
 }
 
 .email-icon {
   height: 2.5rem;
 }
-
-/* FOOTER SECTION */
 
 footer {
   height: 26vh;
@@ -427,3 +378,78 @@ footer {
 footer p {
   text-align: center;
 }
+
+body {
+  background-color: #e6e6fa;
+  color: #7438ac;
+}
+
+.section__text__p1,
+.section__text__p2,
+.title {
+  color: #7438ac;
+}
+
+
+.title {
+  font-family: 'Poetsen One';
+}
+
+.aboutt {
+  font-family: Roboto, sans-serif;
+  padding-top: 10px;
+}
+
+.nav-links a {
+  text-decoration: none;
+  transition: transform 0.3s ease-in-out;
+}
+
+.btn {
+  font-weight: 600;
+  transition: all 300ms ease;
+  padding: 1rem;
+  width: 8rem;
+  border: none;
+}
+
+.btn:hover {
+  transform: scale(1.1);
+}
+
+.btn-color-1,
+.btn-color-2 {
+  background: linear-gradient(to right, rgb(235, 137, 238), rgb(245, 178, 211));
+  color: rgb(53, 53, 53)
+}
+
+.btn-color-1:hover,
+.btn-color-2:hover {
+  cursor: pointer;
+  background: linear-gradient(to right, rgb(156, 209, 197), rgb(207, 138, 228));
+}
+
+h1 {
+  background: linear-gradient(to right, rgba(255, 0, 149, 0.719), rgb(0, 204, 255));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.logo {
+    background: linear-gradient(to right, rgb(207, 95, 241), rgb(83, 150, 204));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.logo:hover {
+  cursor: pointer;
+}
+
+.nav-links a {
+  color: #7438ac;
+}
+
+.nav-links a:hover {
+  color: #ac79db;
+}
+
