--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
 body {
   font-family: 'Poetsen One', cursive;
   font-style: italic;
+  display: flex;
+  flex-direction: column;
+  gap: 64px;
 }
 
 html {
@@ -35,7 +38,7 @@ nav,
 nav {
   justify-content: space-around;
   align-items: center;
-  height: 17vh;
+  height: 128px;
 }
 
 .nav-links {
@@ -145,7 +148,6 @@ a:hover {
 
 section {
   padding-top: 4vh;
-  height: 96vh;
   margin: 0 10rem;
   box-sizing: border-box;
   min-height: fit-content;
@@ -159,15 +161,8 @@ section {
   display: flex;
   justify-content: center;
   gap: 5rem;
-  height: 80vh;
 }
 
-.section__pic-container {
-  display: flex;
-  height: 400px;
-  width: 400px;
-  margin: auto 0;
-}
 
 .section__text {
   align-self: center;
@@ -193,7 +188,6 @@ section {
   font-size: 4rem;
   text-align: center;
 }
-
 
 
 .icon {
@@ -238,6 +232,10 @@ section {
   gap: 2rem;
   margin-bottom: 2rem;
   margin-top: 2rem;
+    display: flex;
+    flex-wrap: wrap; /* If you want the items to wrap to the next line when the container is full */
+    justify-content: space-between; /* Adjust as needed */
+  
 }
 
 .about-details-container {
@@ -256,6 +254,9 @@ section {
   background: rgb(200, 199, 248);
   border-radius: 4rem;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .details-container h3 {
@@ -265,12 +266,6 @@ section {
 .section-container {
   gap: 4rem;
   height: 80%;
-}
-
-.section__pic-container {
-  height: 400px;
-  width: 400px;
-  margin: auto 0;
 }
 
 #experience {
@@ -302,8 +297,8 @@ section {
 article {
   display: flex;
   width: 10rem;
-  justify-content: space-around;
-  gap: 0.5rem;
+  gap: 1rem;
+  align-items: center;
 }
 
 article .icon {
@@ -333,7 +328,6 @@ article .icon {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  height: 70vh;
 }
 
 .contact-info-upper-container {
@@ -371,8 +365,7 @@ article .icon {
 }
 
 footer {
-  height: 26vh;
-  margin: 0 1rem;
+  padding-bottom: 64px;
 }
 
 footer p {
@@ -453,3 +446,14 @@ h1 {
   color: #ac79db;
 }
 
+.contact-list {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 64px;
+}
+
+.contact-list > * {
+  cursor: pointer;
+  width: 256px;
+}
